# mju-univ-auth

./: .coverage  .gitignore  README.md  TODO.md  api_server.py  api_server_test.py  main.py  mju_concurrency_login.py  mju_concurrency_login_with_get_student_card.py  mju_concurrency_login_with_get_student_card_other_id.py  pyproject.toml  requirements-dev.txt  requirements.txt  ucheck_test.py
api/: README.md
doc/: architecture.md  background.md  concurrent_usage.md  contributing.md  error.md  raw_usage.md  refactor.md  sso_login_process.md  tech.md
mju_univ_auth/: Authenticator.py  __init__.py  __main__.py  abc.py  authenticator.py  base_authenticator.py  base_fetcher.py  config.py  examples.py  exceptions.py  facade.py  results.py  sso.py  standard_authenticator.py  student_card.py  student_card_fetcher.py  student_change_log_fetcher.py  student_changelog.py  sugang_authenticator.py  sugang_list_fetcher.py
mju_univ_auth/authenticator/: __init__.py  base_authenticator.py  standard_authenticator.py
mju_univ_auth/config/: __init__.py  settings.py
mju_univ_auth/domain/: __init__.py  lecture.py  lecture_search_request.py  student_basicinfo.py  student_card.py  student_changelog.py
mju_univ_auth/fetcher/: __init__.py  base_fetcher.py  student_basicinfo_fetcher.py  student_card_fetcher.py  student_change_log_fetcher.py  student_changelog_fetcher.py
mju_univ_auth/infrastructure/: __init__.py  crypto.py  http_client.py  parser.py
mju_univ_auth/services/: __init__.py  sso_service.py  student_card_service.py  student_changelog_service.py
mju_univ_auth/utils/: __init__.py  logging.py
pypi/: test.py
tests/: conftest.py  test_authenticator.py  test_facade_highlevel.py  test_facade_login.py  test_student_card_fetcher.py  test_student_changelog_fetcher.py
tests/integration/: test_real_auth.py  test_real_facade.py
tests/mock/: test_error_handling.py  test_facade_highlevel.py  test_standard_authenticator.py  test_student_card_fetcher.py  test_student_changelog_fetcher.py
tests/unit/: test_domain.py  test_parser.py
