[project]
name = "mju_univ_auth"
version = "0.3.0"
description = "명지대학교 학생 인증 및 정보 조회를 위한 Python 라이브러리"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
exclude = [
    "pypi*",
    "test_pypi*",
]
