[project]
name = "mju_univ_auth"
version = "0.8.0"
description = "명지대학교 학생 인증 및 정보 조회를 위한 Python 라이브러리"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Shin Nyeon Ki", email = "sygys10293@mju.ac.kr"}]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
exclude = [
    "pypi*",
    "test_pypi*",
    "deployment*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "fastapi>=0.123.0",
    "loguru>=0.7.3",
    "uvicorn>=0.38.0",
]

