[project]
name = "mju_univ_auth"
version = "0.8.6"
description = "명지대학교 학생 인증 및 정보 조회를 위한 Python 라이브러리"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Shin Nyeon Ki", email = "sygys10293@mju.ac.kr"}]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.5",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools.packages.find]
exclude = [
    "pypi*",
    "test_pypi*",
    "deployment*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "fastapi>=0.123.0",
    "loguru>=0.7.3",
    "uvicorn>=0.38.0",
    "requests_mock>=1.12.1",
]

